--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
  form {
     width: 100%;
     background-color: #272933;
-    padding: 25px;
+    padding: 20px;
     max-width: 30rem;
     border-radius: 10px;
     box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.329);
@@ -226,4 +226,20 @@
 
  .error {
     color: tomato;
+ }
+
+ @media screen and (max-width: 500px) {
+  .form {
+    padding: 10px;
+  }
+
+   .logo {
+   width: 60px;
+   height: 60px;
+   border-radius: 100%;
+   }
+
+   .title {
+    padding: 7px 0px 0px 10px;
+   }
  }
