--- a/style.css
+++ b/style.css
@@ -125,12 +125,14 @@
     resize: vertical;
  }
 
- .adicionar {
+ .adicionar, .adicionar3, 
+ .adicionar4, .adicionar5 {
    display: flex;
    margin-left: 5px;
  }
 
- .btn-adicionar {
+ .btn-adicionar2,  .btn-adicionar3,  
+ .btn-adicionar4,  .btn-adicionar5 {
   height: 30px;
   width: 25px;
   border: none;
@@ -149,7 +151,8 @@
    margin-left: 7px;
  }
 
- .container2 {
+ .container2, .container3,
+ .container4, .container5 {
   display: none;
  }
 
@@ -171,7 +174,8 @@
 
 }
 
-.btn-remover {
+.btn-remover, .btn-remover3, 
+.btn-remover4, .btn-remover5 {
   height: 30px;
   width: 25px;
   border: none;
